kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo
spec:
  selector:
    app: api
  ports:
    - port: 31337
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: demo
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: demo
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
