kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  # tls:
  #   - hosts:
  #       - mortis-grimreaper.ddns.net
  #     secretName: mortis-tls
  rules:
    # - host: mortis-grimreaper.ddns.net
    # - host: 192.168.1.2.nip.io
    - http:
        paths:
          - backend:
              service:
                name: api-service
                port: 
                  number: 8000
            path: /api
            pathType: Exact
